--- a/.github/workflows/macos-cef.yml
+++ b/.github/workflows/macos-cef.yml
@@ -50,7 +50,16 @@ jobs:
           for app_path in tests/cefsimple/Release/cefsimple.app cefsimple/Release/cefsimple.app; do
             if [[ -d "$app_path" ]]; then
               echo "Signing: $app_path"
-              codesign -s - -f --deep "$app_path"
+              # Sign frameworks first
+              find "$app_path/Contents/Frameworks" -name "*.framework" -o -name "*.dylib" | while read framework; do
+                codesign -s - -f "$framework" 2>/dev/null || true
+              done
+              # Sign helper executables
+              find "$app_path/Contents/Frameworks" -type f -perm /111 | while read helper; do
+                codesign -s - -f "$helper" 2>/dev/null || true
+              done
+              # Sign main app with entitlements
+              codesign -s - -f --deep --entitlements /dev/null "$app_path"
             fi
           done
 
