--- a/.github/workflows/macos-cef.yml
+++ b/.github/workflows/macos-cef.yml
@@ -110,19 +110,11 @@ jobs:
           
           echo "Creating DMG from: $APP_PATH"
           
-          # Create temporary directory for DMG contents
-          TEMP_DIR=$(mktemp -d)
-          cp -r "$APP_PATH" "$TEMP_DIR/"
-          ln -s /Applications "$TEMP_DIR/Applications"
-          
-          # Create DMG
-          hdiutil create -volname "cefsimple" -srcfolder "$TEMP_DIR" -ov -format UDZO "cefsimple.dmg"
+          # Create DMG directly from app
+          hdiutil create -volname "cefsimple" -srcfolder "$APP_PATH" -ov -format UDZO "cefsimple.dmg"
           
           # Show size
           ls -lh cefsimple.dmg
-          
-          # Cleanup
-          rm -rf "$TEMP_DIR"
 
       - name: Upload app
         uses: actions/upload-artifact@v4
